[gd_scene load_steps=8 format=3 uid="uid://bacvied61ghpe"]

[ext_resource type="Script" uid="uid://t7x03xkbah7n" path="res://scenes/GUI/main_game/tool_cards/gui_tool_card_button.gd" id="1_a7c0j"]
[ext_resource type="Texture2D" uid="uid://ugtybr3upkmn" path="res://resources/sprites/GUI/icon_backgrounds/tool_card_background.png" id="2_a7c0j"]
[ext_resource type="Texture2D" uid="uid://b4wijuwglcpg0" path="res://resources/sprites/GUI/shared/border3.png" id="3_wvnx0"]
[ext_resource type="PackedScene" uid="uid://bfye3pwakcidx" path="res://scenes/GUI/shared/descriptions/gui_tooltip_description_separator.tscn" id="4_a7c0j"]
[ext_resource type="PackedScene" uid="uid://defua0wjy7nqc" path="res://scenes/GUI/shared/descriptions/gui_description_rich_text_label.tscn" id="5_ckxcp"]
[ext_resource type="PackedScene" uid="uid://673wlt1ldg8q" path="res://scenes/GUI/utils/progress_bar/gui_segmented_progress_bar.tscn" id="7_882ho"]
[ext_resource type="Texture2D" uid="uid://cvqkjyne5mxwy" path="res://resources/sprites/icons/other/icon_cooldown.png" id="8_dn2eb"]

[node name="GUIToolCardButton" type="PanelContainer"]
offset_right = 36.0
offset_bottom = 48.0
size_flags_vertical = 4
script = ExtResource("1_a7c0j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 1

[node name="CardContainer" type="PanelContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 48)
layout_mode = 2
mouse_filter = 2

[node name="BackgroundMargin" type="MarginContainer" parent="VBoxContainer/CardContainer"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="Background" type="NinePatchRect" parent="VBoxContainer/CardContainer/BackgroundMargin"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_a7c0j")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Border" type="NinePatchRect" parent="VBoxContainer/CardContainer"]
unique_name_in_owner = true
self_modulate = Color(0.223529, 0.121569, 0.129412, 1)
layout_mode = 2
texture = ExtResource("3_wvnx0")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CardContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CardContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/CardContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"HUD_small"
text = "Egg"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GUITooltipDescriptionSaparator" parent="VBoxContainer/CardContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_a7c0j")]
unique_name_in_owner = true
self_modulate = Color(0.223529, 0.121569, 0.129412, 1)
layout_mode = 2

[node name="ActionContainer" type="VBoxContainer" parent="VBoxContainer/CardContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 2
alignment = 1

[node name="GUIDescriptionRichTextLabel" parent="VBoxContainer/CardContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_ckxcp")]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0.223529, 0.121569, 0.129412, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CardContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="GUISegmentedProgressBar" parent="VBoxContainer/CardContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("7_882ho")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
segment_color = Color(0.992157, 0.823529, 0.929412, 1)
icon_texture = ExtResource("8_dn2eb")
icon_size = Vector2(6, 6)
